--- a/requirements.txt
+++ b/requirements.txt
@@ -165,3 +165,7 @@ zope.interface==6.1
 zstandard==0.23.0
 setuptools>=68.0.0
 wheel>=0.40.0
+Flask>=2.3
+gunicorn>=20.1
+setuptools>=68.0.0
+wheel>=0.40.0
